fixed movie card size on small screen

--- a/src/Components/MovieBucket/MovieBucket.module.css
+++ b/src/Components/MovieBucket/MovieBucket.module.css
@@ -47,7 +47,7 @@
   left: 49.5%;
 }
 
-@media (max-width: 650px) {
+@media only screen and (min-width: 200px) and (max-width: 1750px) {
   .bucketBody {
     display: block;
     font-size: 80%;
@@ -57,5 +57,8 @@
     margin: -3rem 0 2rem 1rem;
     padding: 1rem;
     background: rgba(white, 0.8);
+  }
+  .vl {
+  height: 23%;
   }
 }
